--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Default Jupyter Notebook"
+    "Ensure there is a cell beginning `# Parameters:`\n",
+    "\n",
+    "Pass parameters in the URL, e.g. `?a=1&b=\"whatever\"`.\n",
+    "Pass `autorun=true` to automatically run all cells.\n",
+    "\n",
+    "E.g. `http://localhost:8888/notebooks/example.ipynb?a=1&b=\"whatever\"&autorun=true`"
    ]
   },
   {
@@ -18,19 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Hello\")"
+    "print(\"a=\", a)\n",
+    "print(\"b=\", b)"
    ]
   }
  ],
@@ -50,9 +48,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
